Update TestNG and other dependencies: https://github.com/unitsofmeasurement/unit-tck/issues/50